# tarea-iris

./: pyproject.toml
notebooks/: CasTareaIris.ipynb  ClientNeightbors.ipynb  ClientRegresion.ipynb  ClientTree.ipynb  ClientVector.ipynb
tarea_iris/: iris_predict_neighbors_app.py  iris_predict_regresion_app.py  iris_predict_service.py  iris_predict_tree_app.py  iris_predict_vector_app.py
