[tool.poetry]
name = "tarea-iris"
version = "0.1.0"
description = ""
authors = ["CristianDrk <basura.msn@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
